<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.petrociencia.jeremy.com.petrociencia.Registro">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tituloRegistro"
        android:text="@string/registroUser"
        android:layout_marginBottom="50px"
        android:textAlignment="center"
        android:textSize="40dp"
        android:textColor="#000000"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputNewUser"
        android:hint="@string/nombre_usuario"

        android:inputType="text"
        android:textSize="25dp"
        android:layout_marginBottom="50px"
        android:layout_gravity="center_vertical"

        android:textColorHint="#000000"/>
    "/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputNewPassword"
        android:hint="@string/contrasena"

        android:textColorHint="#000000"
        android:textSize="25dp"
        android:layout_marginBottom="50px"
        android:inputType="textPassword"
        android:layout_gravity="center_vertical"
        />



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:id="@+id/buttonRegistrar"
        android:textSize="25dp"
        android:layout_marginBottom="50px"
        android:onClick="registrar"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salir"
        android:textSize="25dp"
        android:id="@+id/SalirRegistro"
        android:onClick="salir"/>

</LinearLayout>
