<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.petrociencia.jeremy.com.petrociencia.Login"
    android:background="#E1E1E1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tituloAcceso"
        android:text="@string/tituloLogin"
        android:layout_marginBottom="50px"
        android:textAlignment="center"
        android:textSize="40dp"
        android:textColor="#000000"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputUsername"
        android:hint="@string/nombre_usuario"

        android:inputType="text"
        android:textSize="25dp"
        android:layout_marginBottom="50px"
        android:layout_gravity="center_vertical"

        android:textColorHint="#000000"/>
    "/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputPassword"
        android:hint="@string/contrasena"

        android:textColorHint="#000000"
        android:textSize="25dp"
        android:layout_marginBottom="50px"
        android:inputType="textPassword"
        android:layout_gravity="center_vertical"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:id="@+id/buttonlogin"
        android:textSize="25dp"
        android:layout_marginBottom="50px"
        android:onClick="ingresar"/>

    <!--<com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"
        android:layout_marginBottom="50px"/>-->





</LinearLayout>
