<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_add_task"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_salir"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu"
        app:showAsAction="always" />


</menu>